[package]
name = "websocketmaster"
version = "0.1.0"
authors = ["egor"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = {version = "0.3.12"}
futures-util = {version = "0.3.12"}
tokio-tungstenite = {version = "*", features=["tls"]}
tokio = {version = "1.1.0", features=["full"]}
log = {version = "0.4.13"}
url = {version = "2.2.0"}
rust-crypto = "^0.2"
hmac = {version="*"}
sha2 = {version="*"}
hex = {version="*"}
json = {version="*"}
serde = {version="1.0.123", features=["derive"]}
serde_derive = { version="1.0.123"}
serde_json = {version="*"}
